--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
 
     // utils
     implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.6'
+    implementation 'com.github.pwittchen:reactivewifi-rx2:0.3.0'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'com.github.javiersantos:AppUpdater:2.7'
