--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 buildscript {
     repositories {
@@ -13,7 +14,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.28.0'
+
     }
 }
 
@@ -30,7 +31,7 @@ repositories {
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "ru.nemodev.numbers"
+        applicationId "ru.nemodev.number.fact"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
@@ -65,6 +66,10 @@ android {
     sourceSets {
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -73,7 +78,10 @@ dependencies {
     // view base
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
+
+    // costume view
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
     // rxjava2
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -83,19 +91,22 @@ dependencies {
     implementation "androidx.paging:paging-rxjava2:$paging_version"
 
     // retrofit2
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.6.2'
-    implementation 'com.squareup.retrofit2:converter-jackson:2.6.2'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
+    def retrofit_version = "2.6.2"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-jackson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 
     // room
-    implementation 'androidx.room:room-runtime:2.2.0-rc01'
-    implementation 'androidx.room:room-rxjava2:2.2.0-rc01'
-    annotationProcessor 'androidx.room:room-compiler:2.2.0-rc01'
+    def room_version = "2.2.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // butterknife
-    implementation 'com.jakewharton:butterknife:10.2.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+    def butterknife_version = "10.2.0"
+    implementation "com.jakewharton:butterknife:$butterknife_version"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife_version"
 
     // utils
     implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.6'
@@ -106,9 +117,10 @@ dependencies {
 
     // system
     implementation 'com.google.android.gms:play-services-ads:18.2.0'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
-        transitive = true
-    }
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'com.google.firebase:firebase-perf:19.0.1'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation "android.arch.lifecycle:reactivestreams:1.1.1"
 
@@ -116,3 +128,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
