--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,10 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "ru.nemodev.number.fact"
-        minSdkVersion 24
+        minSdkVersion 23
         targetSdkVersion 28
-        versionCode 1
-        versionName "0.0.1"
+        versionCode 2
+        versionName "0.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {
@@ -118,13 +118,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.google.firebase:firebase-perf:19.0.2'
+    implementation 'com.google.firebase:firebase-config:19.0.3'
 
     // google arh
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation "android.arch.lifecycle:reactivestreams:1.1.1"
 
-    implementation 'androidx.databinding:databinding-runtime:3.5.2'
-    implementation 'androidx.databinding:databinding-adapters:3.5.2'
+    implementation 'androidx.databinding:databinding-runtime:3.5.3'
+    implementation 'androidx.databinding:databinding-adapters:3.5.3'
 
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
